// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleActions Component Basic Rendering should match snapshot in normal state 1`] = `
<View
  style={
    {
      "paddingBottom": 24,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <TouchableOpacity
      disabled={false}
      onPress={[MockFunction]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#F5F5F5",
            "borderColor": "#E0E0E0",
            "borderWidth": 1,
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        Cancel
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      disabled={false}
      onPress={[MockFunction]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#007AFF",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        Schedule Meeting
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`ScheduleActions Component Loading State should match snapshot in loading state 1`] = `
<View
  style={
    {
      "paddingBottom": 24,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <TouchableOpacity
      disabled={true}
      onPress={[MockFunction]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#F5F5F5",
            "borderColor": "#E0E0E0",
            "borderWidth": 1,
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        Cancel
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      disabled={true}
      onPress={[MockFunction]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#007AFF",
          },
        ]
      }
    >
      <ActivityIndicator
        color="#FFFFFF"
        size="small"
      />
    </TouchableOpacity>
  </View>
</View>
`;
